Fixed long lists of profiles overflowing the container (I'm looking at you, Neil)

--- a/xfndiscovery.css
+++ b/xfndiscovery.css
@@ -16,6 +16,7 @@
 	color:#fff;
 	text-align:left;
 	padding:1em 0;
+	overflow:hidden;
 }
 
 #xfn-discovery a.trigger
